--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,14 +1,15 @@
 name: Publish Docker image
 on: [push]
 jobs:
-  push_to_registries:
+  build_and_push:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.8, 3.9, latest]
+        python: [3.8-slim, 3.8, 3.9-slim, 3.9, slim, latest]
     steps:
       - uses: actions/checkout@v2
-      - uses: docker/login-action@v1
+      - if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
